--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title></title>
+	<title>李亮-Resume</title>
+	<script src="http://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
+	<link rel="stylesheet" href="">
 </head>
+<body>
+	
+</body>
 </html>
