--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </aside>
         </script>
 
-        <script src="http://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
+        <script src="//upcdn.b0.upaiyun.com/libs/jquery/jquery-1.9.1.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
         <script async src="http://use.edgefonts.net/muli.js"></script>
         <script src="js/plugins.js"></script>
